Inicia criação site
Estrutura básica, alinhamentos e CSS

--- a/Html 5 e CSS3/exercicios/plano-de-fundo.html
+++ b/Html 5 e CSS3/exercicios/plano-de-fundo.html
@@ -21,7 +21,7 @@
         div#q2{
             background-image: linear-gradient(to bottom, yellow, blue );
         }
-        div#q3{
+        div#q3mn{
             background-image: url('imagens/wallpaper001.jpg');
         }
     </style>
