Atualização de Fontes

--- a/Html 5 e CSS3/Desafios/Cordel-simples-site/index.html
+++ b/Html 5 e CSS3/Desafios/Cordel-simples-site/index.html
@@ -9,13 +9,11 @@
     <title>Cordel</title>
 </head>
 <body>
-
-       <header> 
+    <header> 
         <h1>
             Cordel Moderno
-        </h1>
-        
-    Por <a href=" [SITE: https://www.recantodasletras.com.br/poesias/3186743]"> Milton Duarte</a>
+        </h1>   
+        Por <a href=" [SITE: https://www.recantodasletras.com.br/poesias/3186743]"> Milton Duarte</a>
     </header>
 
     <section class="normal">
@@ -28,7 +26,7 @@
         Vou dizer tudo em poesia.</p>
     </section>
        
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
         Não é mais como era antes  <br> 
         É tudo abreviado <br> 
@@ -62,8 +60,8 @@
     </p>
     </section>
 
-    <section class="imagem">
-    <p></p>
+    <section class="imagem" id="img02">
+    <p>
         Tenho saudade das cartas <br>
         Escritas com a própria mão <br>
         Mandava no mês de Junho <br>
