Criando nova pagina

--- a/Html 5 e CSS3/Armazenando-dados/index.html
+++ b/Html 5 e CSS3/Armazenando-dados/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +16,7 @@
         <div class="principal">
            
             <form action="" class="adicionar" id="novoItem">
+                <h1 class="texto__titulo">Lista de Compras</h1>
                 <label for="item">Nome</label>
                 <input type="text" name="nome" id="nome">
 
