--- a/Html 5 e CSS3/Consumindo_API/index.html
+++ b/Html 5 e CSS3/Consumindo_API/index.html
@@ -78,22 +78,22 @@
             <h3 class="principal__subtitulo">Dados pessoais</h3>
             <div class="formulario__campo">
                 <label class="campo__etiqueta" for="nome">Nome Completo</label>
-                <input name="nome" id="nome" class="campo__escrita" required />
+                <input name="nome" id="nome" class="campo__escrita"  />
             </div>
             <div class="formulario__dupla">
                 <div class="formulario__campo">
                     <label class="campo__etiqueta" for="nascimento">Nascimento</label>
-                    <input name="nascimento" id="nascimento" type="date" class="campo__escrita" required />
+                    <input name="nascimento" id="nascimento" type="date" class="campo__escrita"  />
                 </div>
                 <div class="formulario__campo">
                     <label class="campo__etiqueta" for="telefone">Contato</label>
                     <input name="telefone" id="telefone" type="tel" placeholder="(XX) XXXXX-XXXX" class="campo__escrita"
-                        required />
+                         />
                 </div>
             </div>
             <div class="formulario__campo">
                 <label class="campo__etiqueta" for="email">E-mail</label>
-                <input name="email" id="email" type="email" class="campo__escrita" required />
+                <input name="email" id="email" type="email" class="campo__escrita"  />
             </div>
 
             <h3 class="principal__subtitulo">Endereço</h3>
@@ -105,12 +105,12 @@
 
             <div class="formulario__campo">
                 <label class="campo__etiqueta" for="endereco">Endereço</label>
-                <input name="endereco" id="endereco" class="campo__escrita" required />
+                <input name="endereco" id="endereco" class="campo__escrita"  required />
             </div>
             <div class="formulario__dupla">
                 <div class="formulario__campo">
                     <label class="campo__etiqueta" for="numero">Numero</label>
-                    <input name="numero" id="numero" class="campo__escrita" required />
+                    <input name="numero" id="numero" class="campo__escrita"  />
                 </div>
                 <div class="formulario__campo">
                     <label class="campo__etiqueta" for="complemento">Complemento</label>
@@ -119,12 +119,12 @@
             </div>
             <div class="formulario__campo">
                 <label class="campo__etiqueta" for="bairro">Bairro</label>
-                <input name="bairro" id="bairro" class="campo__escrita" required />
+                <input name="bairro" id="bairro" class="campo__escrita"  />
             </div>
             <div class="formulario__dupla">
                 <div class="formulario__campo">
                     <label class="campo__etiqueta" for="cidade">Cidade</label>
-                    <input name="cidade" id="cidade" class="campo__escrita" required />
+                    <input name="cidade" id="cidade" class="campo__escrita"  />
                 </div>
 
                 <div class="formulario__campo">
