--- a/Html 5 e CSS3/CodeChella/gerais.html
+++ b/Html 5 e CSS3/CodeChella/gerais.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
+
     <link rel="stylesheet" href="style-outras-paginas.css">
+    <link rel="stylesheet" href="/paginas/gerais/drop-gerais.css">
+    <link rel="stylesheet" href="/styles/banner.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Raleway:wght@500;700&display=swap" rel="stylesheet"> 
@@ -41,9 +45,14 @@
         </div>
     </heade>
 
+   
+    
     <section class="banner">
-        <div class="banner__texto">
+        <div class="banner__geral">
             <h2 class="banner__titulo">Informaçoes Gerais</h2>
+            <div class="banner__texto">
+                <img src="/paginas/gerais/img-gerais/banner-sem-texto.jpg" alt="Banner informações gerais">
+            </div>
         </div>
     </section>
 
@@ -53,8 +62,9 @@
 
     <section class="lista-perguntas">
         <div class="perguntas" id="perguntas">
-            <h2 class="titulo-pergunta">Quais serão as atrações?
-            <img src="/paginas/gerais/img-gerais/drop_down.svg" class="botao__menu-drop"></h2>
+            <h2 class="titulo-pergunta">Quais serão as atrações?</h2>
+            <div class="icon"></div>
+            <!-- <img src="/paginas/gerais/img-gerais/drop_down.svg" class="botao__menu-drop"></h2> -->
         </div>
 
         <div class="resposta" id="resposta">
@@ -64,42 +74,50 @@
         </div>
 
         <div class="perguntas" id="perguntas">
-            <h2 class="titulo-pergunta">Qual é a classificação étaria?
-            <img src="/paginas/gerais/img-gerais/drop_down.svg" class="botao__menu-drop"></h2>
+            <h2 class="titulo-pergunta">Qual é a classificação étaria?</h2>
+            <div class="icon"></div>
         </div>
 
         <div class="resposta" id="resposta">
-            <p class="texto-resposta">Teremos dois dias de shows, o primeiro (11/03) com bandas de rock, e o 
-                segundo (12/03) com bandas pop. 
-                <a href="#"> Confira o line-up em detalhes clicando neste link!</a></p>
+            <p class="texto-resposta">A partir de 16 anos, todo mundo pode entrar. De 13 a 15 anos, tem que estar acompanhado dos pais ou responsáveis legais. Menores de 10 anos não podem entrar.</p>
         </div>
 
 
         <div class="perguntas" id="perguntas">
-            <h2 class="titulo-pergunta">Quais são os setores disponíveis?
-            <img src="/paginas/gerais/img-gerais/drop_down.svg" class="botao__menu-drop"></h2>
+            <h2 class="titulo-pergunta">Quais são os setores disponíveis?</h2>
+            <div class="icon"></div>
         </div>
 
         <div class="resposta" id="resposta">
-            <p class="texto-resposta">Teremos dois dias de shows, o primeiro (11/03) com bandas de rock, e o 
-                segundo (12/03) com bandas pop. 
-                <a href="#"> Confira o line-up em detalhes clicando neste link!</a></p>
+            <p class="texto-resposta">Pista Premium
+                Pista Comum
+                Cadeiras térreo
+                Cadeiras superiores
+                Rampas</p>
         </div>
 
         <div class="perguntas" id="perguntas">
-            <h2 class="titulo-pergunta">Quais são os itens proibidos?
-            <img src="/paginas/gerais/img-gerais/drop_down.svg" class="botao__menu-drop"></h2>
+            <h2 class="titulo-pergunta">Quais são os itens proibidos?</h2>
+            <div class="icon"></div>
         </div>
 
         <div class="resposta" id="resposta">
-            <p class="texto-resposta">Teremos dois dias de shows, o primeiro (11/03) com bandas de rock, e o 
-                segundo (12/03) com bandas pop. 
-                <a href="#"> Confira o line-up em detalhes clicando neste link!</a></p>
+            <p class="texto-resposta">    Garrafas, latas, bebidas, utensílios de armazenagem, embalagens rígidas com tampa, capacetes, cadeiras ou bancos, armas de fogo e armas brancas, objetos pontiagudos, cortantes e/ou perfurantes, correntes e cinturões, fogos de artifício, objetos de vidro, substâncias inflamáveis, cigarro eletrônico, corrosivas e ou tóxicas, revistas, jornais, livros e copo térmico ou similares.</p>
+        </div>
+
+        <div class="perguntas" id="perguntas">
+            <h2 class="titulo-pergunta">Quem tem direito a meia-entrada?</h2>
+            <div class="icon"></div>
+        </div>
+
+        <div class="resposta" id="resposta">
+            <p class="texto-resposta"> De acordo com a Lei Federal, têm direito ao benefício da meia-entrada aqueles que preencherem os requisitos e apresentarem os documentos comprobatórios.</p>
         </div>
 
 
 
     </section>
+    
 
     <footer class="rodape">
         <div class="footer__topo">
